fixing html bugs

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
         </form>
     </div>
     <footer>
+        <a href="https://github.com/Malikinho/BaseConverter">
         <i id="git" class="fab fa-github"></i>
         <p id="names">Furkan / Malik</p>
+    </a>
         <p id="copyright">copyright 2021 <i class="far fa-copyright"></i> Fernando Pessoa</p>
     </footer>
 </body>
