--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
                     <option value="16">16 (hexadecimal)</option>
                 </select>
             </div>
-            <div class="form-element">
+            <div onclick="setValue()" class="form-element">
                 <button class="convert btn btn-secondary" type="button" title="convert">
                     <span>= Convert</span>
                 </button>
-                <button class="reset btn btn-secondary" type="button" title="Reset">
+                <button onclick="setReset()" class="reset btn btn-secondary" type="button" title="Reset">
                     <span><i class="fas fa-trash-alt"></i>Reset </span>
                     
                 </button>
-                <button class=" btn btn-secondary" type="button" title="Swap Convertion">
+                <button onclick="setSwap()" class=" btn btn-secondary" type="button" title="Swap Convertion">
                     <i class="fas fa-retweet"></i>
                     Swap 
                 </button>
