--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>UFP</header>
+    <h1>Base Converter</h1>
     <div class="container">
         <fieldset>
         <form id="convertform" autocomplete="off">
